--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -7,7 +7,23 @@ on:
     branches: [ master ]
 
 jobs:
+  #fetch Apptainer images
+  fetch_images:
+    runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        tag: ["uwlcm_ubuntu_24_04_cuda_12_9_0", "uwlcm_ubuntu_24_04_cuda_12_9_0_mvapich2"]
+    steps:
+    - uses: actions/checkout@v6
+
+    - name: load UWLCM Singularity image
+      uses: igfuw/load_UWLCM_singularity_image@main
+      with:
+        path: ${{ github.workspace }}/singularity_images
+        tag: ${{ matrix.tag }}
+
   build_CUDA:
+    needs: fetch_images
     runs-on: ubuntu-24.04
     strategy:
       matrix:
@@ -31,10 +47,12 @@ jobs:
         build_type: ${{matrix.build_type}}
         threads: ${{matrix.threads}}
         path: ${{ github.workspace }}
+        singularity_path: ${{ github.workspace }}/singularity_images
         tag: ${{ matrix.tag }}
         app_opts: ${{ matrix.app_opts }}
 
   build:
+    needs: fetch_images
     runs-on: ubuntu-24.04
     strategy:
       matrix:
@@ -63,6 +81,7 @@ jobs:
         build_type: ${{matrix.build_type}}
         threads: ${{matrix.threads}}
         path: ${{ github.workspace }}
+        singularity_path: ${{ github.workspace }}/singularity_images
         install_prefix: ${{ github.workspace }}/installed 
         tag: ${{ matrix.tag }}
         cxx: ${{ matrix.cxx }}
@@ -106,7 +125,7 @@ jobs:
     - name: load UWLCM Apptainer image
       uses: igfuw/load_UWLCM_singularity_image@main
       with:
-        path: ${{ github.workspace }}/apptainer_images
+        path: ${{ github.workspace }}/singularity_images
         tag: ${{ matrix.tag }}
 
     - name: Run unit tests
@@ -154,6 +173,7 @@ jobs:
         build_type: ${{matrix.build_type}}
         threads: 4
         path: ${{ github.workspace }}/libmpdataxx/libmpdata++
+        singularity_path: ${{ github.workspace }}/singularity_images
         install_prefix: ${{ github.workspace }}/installed
 
     - name: Configure kinematic_2D CMake
@@ -210,7 +230,7 @@ jobs:
     - name: load UWLCM Apptainer image
       uses: igfuw/load_UWLCM_singularity_image@main
       with:
-        path: ${{ github.workspace }}/apptainer_images
+        path: ${{ github.workspace }}/singularity_images
 
     - name: Install libcloudph++
       run: sudo cmake --install build
@@ -254,6 +274,7 @@ jobs:
       run: apptainer exec -B${{ github.workspace }}/installed $SI python3 -m pytest -s -v unit_test_debug
 
   build_and_test_KiD-A:
+    needs: fetch_images
     runs-on: ubuntu-24.04
     strategy:
       matrix:
@@ -287,6 +308,7 @@ jobs:
         build_type: ${{matrix.build_type}}
         threads: ${{matrix.threads}}
         path: ${{ github.workspace }}
+        singularity_path: ${{ github.workspace }}/singularity_images
         install_prefix: ${{ github.workspace }}/installed 
 
     - name: Install libcloudph++
@@ -316,6 +338,7 @@ jobs:
       run: apptainer exec -B${{ github.workspace }}/installed  $SI bash ./.travis_scripts/lwp_test.sh
 
   call_test_uwlcm_hlpr:
+    needs: fetch_images
     uses: igfuw/UWLCM/.github/workflows/test_uwlcm_hlpr.yml@master
     with:
       UWLCM_sha: "master"
